// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal #render() should add correct className after change state to "open" 1`] = `
<Global
  className="ui-modal ui-modal_active ui-modal_open"
>
  <div
    className="ui-modal__overlay"
    onClick={[Function]}
  />
  <div
    className="ui-modal__container"
  >
    <section
      className="ui-modal__content"
    >
      Modal Content
    </section>
  </div>
</Global>
`;

exports[`Modal #render() should render closable modal with close button text 1`] = `
<Global
  className="ui-modal ui-modal_active"
>
  <div
    className="ui-modal__overlay"
    onClick={[Function]}
  />
  <div
    className="ui-modal__container"
  >
    <section
      className="ui-modal__content"
    >
      Modal Content
    </section>
  </div>
</Global>
`;

exports[`Modal #render() should render empty modal when status is not active 1`] = `null`;

exports[`Modal #render() should render fullscreen modal 1`] = `
<Global
  className="ui-modal ui-modal_active ui-modal_fullscreen"
>
  <div
    className="ui-modal__overlay"
    onClick={[Function]}
  />
  <div
    className="ui-modal__container"
  >
    <section
      className="ui-modal__content"
    >
      Modal Content
    </section>
  </div>
</Global>
`;

exports[`Modal #render() should render inactive modal 1`] = `null`;

exports[`Modal #render() should render modal with custom footer 1`] = `
<Global
  className="ui-modal ui-modal_active"
>
  <div
    className="ui-modal__overlay"
    onClick={[Function]}
  />
  <div
    className="ui-modal__container"
  >
    <section
      className="ui-modal__content"
    >
      Modal Content
    </section>
    <footer
      className="ui-modal__footer"
    >
      <p>
        Custom footer
      </p>
    </footer>
  </div>
</Global>
`;

exports[`Modal #render() should render modal with custom header 1`] = `
<Global
  className="ui-modal ui-modal_active"
>
  <div
    className="ui-modal__overlay"
    onClick={[Function]}
  />
  <div
    className="ui-modal__container"
  >
    <header
      className="ui-modal__header"
    >
      <h1>
        Custom Title
      </h1>
    </header>
    <section
      className="ui-modal__content"
    >
      Modal Content
    </section>
  </div>
</Global>
`;

exports[`Modal #render() should render modal without overlay 1`] = `
<Global
  className="ui-modal ui-modal_active"
>
  <div
    className="ui-modal__container"
  >
    <section
      className="ui-modal__content"
    >
      Modal Content
    </section>
  </div>
</Global>
`;

exports[`Modal #render() should render non closable modal 1`] = `
<Global
  className="ui-modal ui-modal_active"
>
  <div
    className="ui-modal__overlay"
    onClick={[Function]}
  />
  <div
    className="ui-modal__container"
  >
    <section
      className="ui-modal__content"
    >
      Modal Content
    </section>
  </div>
</Global>
`;

exports[`Modal #render() should return active modal with title and footer 1`] = `
<Global
  className="ui-modal ui-modal_active"
>
  <div
    className="ui-modal__overlay"
    onClick={[Function]}
  />
  <div
    className="ui-modal__container"
  >
    <header
      className="ui-modal__header"
    >
      <h3
        className="ui-modal__title"
      >
        Test Modal Title
      </h3>
    </header>
    <section
      className="ui-modal__content"
    >
      Modal Content
    </section>
    <footer
      className="ui-modal__footer"
    >
      <div>
        Test Modal Footer
      </div>
    </footer>
  </div>
</Global>
`;

exports[`Modal #render() should return base active modal with close button 1`] = `
<Global
  className="ui-modal ui-modal_active"
>
  <div
    className="ui-modal__overlay"
    onClick={[Function]}
  />
  <div
    className="ui-modal__container"
  >
    <section
      className="ui-modal__content"
    >
      Modal Content
    </section>
  </div>
</Global>
`;
